--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   "author": "FerrariLee <shiyung@gmail.com>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "request": "~2.34.0",
-    "async": "~0.8.0",
-    "cron": "~1.0.4",
-    "daemon": "~1.1.0"
+    "request": "~2.67.0",
+    "async": "~1.5.0",
+    "cron": "~1.1.0"
   }
 }
